compatible with tibble 2.0.0

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -136,7 +136,7 @@ importFrom(rlang,quo)
 importFrom(rlang,quo_name)
 importFrom(rvcheck,get_fun_from_pkg)
 importFrom(tibble,as.tibble)
-importFrom(tibble,as_data_frame)
+importFrom(tibble,as_tibble)
 importFrom(tibble,data_frame)
 importFrom(tidytree,ancestor)
 importFrom(tidytree,as.treedata)
