--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ S3method(sibling,phylo)
 S3method(tree_subset,phylo)
 S3method(tree_subset,treedata)
 export("%>%")
+export(MRCA)
 export(Nnode)
 export(Nnode2)
 export(Ntip)
