--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,7 +45,6 @@ S3method(offspring,treedata)
 S3method(parent,phylo)
 S3method(parent,treedata)
 S3method(print,treedataList)
-S3method(root,phylo)
 S3method(root,treedata)
 S3method(rootnode,phylo)
 S3method(rootnode,treedata)
@@ -83,6 +82,7 @@ export(parent)
 export(raxml2nwk)
 export(read.astral)
 export(read.beast)
+export(read.beast.newick)
 export(read.codeml)
 export(read.codeml_mlc)
 export(read.fasta)
@@ -105,6 +105,7 @@ export(read.phyloxml)
 export(read.r8s)
 export(read.raxml)
 export(read.tree)
+export(read.treeqza)
 export(rename_taxa)
 export(rescale_tree)
 export(root)
@@ -113,6 +114,7 @@ export(rtree)
 export(tree_subset)
 export(treedata)
 export(write.beast)
+export(write.beast.newick)
 export(write.jtree)
 export(write.nexus)
 export(write.tree)
