--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,6 +81,7 @@ export(read.phylip.tree)
 export(read.phyloxml)
 export(read.r8s)
 export(read.raxml)
+export(read.timetree)
 export(read.tree)
 export(read.treeqza)
 export(rename_taxa)
