--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,9 +81,9 @@ export(read.phylip.tree)
 export(read.phyloxml)
 export(read.r8s)
 export(read.raxml)
-export(read.timetree)
 export(read.tree)
 export(read.treeqza)
+export(read.treetime)
 export(rename_taxa)
 export(rescale_tree)
 export(root)
