--- a/NAMESPACE
+++ b/NAMESPACE
@@ -168,5 +168,5 @@ importFrom(tidytree,offspring)
 importFrom(tidytree,parent)
 importFrom(tidytree,rootnode)
 importFrom(tidytree,treedata)
-importFrom(utils,packageDescription)
 importFrom(yulab.utils,use_perl)
+importFrom(yulab.utils,yulab_msg)
