--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: treeio
 Title: Base Classes and Functions for Phylogenetic Tree Input and Output
-Version: 1.29.0.001
+Version: 1.29.0.002
 Authors@R: c(
     person("Guangchuang", "Yu",     email = "guangchuangyu@gmail.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-6485-8781")),
     person("Tommy Tsan-Yuk", "Lam", email = "tylam.tommy@gmail.com",   role = c("ctb", "ths")),
@@ -24,7 +24,7 @@ Imports:
     tibble,
     tidytree (>= 0.4.5),
     utils,
-    yulab.utils (> 0.1.1)
+    yulab.utils (>= 0.1.5)
 Suggests:
     Biostrings,
     cli,
