--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: treeio
 Title: Base Classes and Functions for Phylogenetic Tree Input and Output
-Version: 1.29.0.002
+Version: 1.29.1
 Authors@R: c(
     person("Guangchuang", "Yu",     email = "guangchuangyu@gmail.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-6485-8781")),
     person("Tommy Tsan-Yuk", "Lam", email = "tylam.tommy@gmail.com",   role = c("ctb", "ths")),
@@ -24,7 +24,7 @@ Imports:
     tibble,
     tidytree (>= 0.4.5),
     utils,
-    yulab.utils (>= 0.1.5)
+    yulab.utils (>= 0.1.6)
 Suggests:
     Biostrings,
     cli,
@@ -45,7 +45,7 @@ VignetteBuilder: knitr
 ByteCompile: true
 License: Artistic-2.0
 Encoding: UTF-8
-URL: https://github.com/YuLab-SMU/treeio (devel), https://docs.ropensci.org/treeio/ (docs), https://www.amazon.com/Integration-Manipulation-Visualization-Phylogenetic-Computational-ebook/dp/B0B5NLZR1Z/ (book), https://doi.org/10.1093/molbev/msz240 (paper)
+URL: https://yulab-smu.top/contribution-tree-data/
 BugReports: https://github.com/YuLab-SMU/treeio/issues
 biocViews: Software, Annotation, Clustering, DataImport, DataRepresentation,
     Alignment, MultipleSequenceAlignment, Phylogenetics
