--- a/NAMESPACE
+++ b/NAMESPACE
@@ -143,6 +143,7 @@ importFrom(methods,missingArg)
 importFrom(methods,new)
 importFrom(methods,setGeneric)
 importFrom(methods,slot)
+importFrom(parallel,mclapply)
 importFrom(rlang,.data)
 importFrom(rlang,check_installed)
 importFrom(rlang,enexpr)
